--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "license": "MIT",
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbo",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -17,8 +17,8 @@
     "lucide-react": "^0.453.0",
     "next": "15.0.1",
     "next-plausible": "^3.12.2",
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "19.0.0-rc-1631855f-20241023",
+    "react-dom": "19.0.0-rc-1631855f-20241023",
     "react-markdown": "^9.0.1",
     "reading-time": "^1.5.0",
     "rehype-format": "^5.0.1",
