--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "^4.3.1",
+    "@next/eslint-plugin-next": "^15.0.1",
     "@types/node": "^22.7.9",
     "@types/react": "^18",
     "@types/react-dom": "^18",
@@ -43,7 +44,9 @@
     "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.8",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "tsx": "^4",
+    "typescript": "^5",
+    "typescript-eslint": "^8.11.0"
   },
   "packageManager": "pnpm@9.12.2"
 }
