--- a/package.json
+++ b/package.json
@@ -4,21 +4,21 @@
   "private": true,
   "license": "MIT",
   "scripts": {
-    "dev": "next dev --turbo",
+    "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
     "format": "prettier -w src"
   },
   "dependencies": {
-    "@atcute/client": "^2.0.3",
-    "@atcute/whitewind": "^1.0.2",
+    "@atcute/client": "^2.0.4",
+    "@atcute/whitewind": "^1.0.3",
     "bright": "^0.8.5",
     "lucide-react": "^0.453.0",
-    "next": "15.0.1",
-    "next-plausible": "^3.12.2",
-    "react": "19.0.0-rc-1631855f-20241023",
-    "react-dom": "19.0.0-rc-1631855f-20241023",
+    "next": "15.0.3",
+    "next-plausible": "^3.12.3",
+    "react": "19.0.0-rc-66855b96-20241106",
+    "react-dom": "19.0.0-rc-66855b96-20241106",
     "react-markdown": "^9.0.1",
     "reading-time": "^1.5.0",
     "rehype-format": "^5.0.1",
@@ -29,27 +29,33 @@
     "remark-parse": "^11.0.0",
     "remark-rehype": "^11.1.1",
     "rss": "^1.2.2",
-    "simple-icons": "^13.14.1",
+    "simple-icons": "^13.16.0",
     "tailwind-merge": "^2.5.4",
     "unified": "^11.0.5"
   },
   "devDependencies": {
-    "@ianvs/prettier-plugin-sort-imports": "^4.3.1",
-    "@next/eslint-plugin-next": "^15.0.1",
-    "@types/node": "^22.7.9",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@ianvs/prettier-plugin-sort-imports": "^4.4.0",
+    "@next/eslint-plugin-next": "15.0.3",
+    "@types/node": "^22.9.0",
+    "@types/react": "npm:types-react@19.0.0-rc.1",
+    "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1",
     "@types/rss": "^0.0.32",
-    "eslint": "^9.13.0",
-    "eslint-config-next": "15.0.1",
+    "eslint": "^9.14.0",
+    "eslint-config-next": "15.0.3",
     "eslint-config-prettier": "^9.1.0",
-    "postcss": "^8",
+    "postcss": "^8.4.47",
     "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.8",
-    "tailwindcss": "^3.4.1",
-    "tsx": "^4",
-    "typescript": "^5",
-    "typescript-eslint": "^8.11.0"
+    "tailwindcss": "^3.4.14",
+    "tsx": "^4.19.2",
+    "typescript": "^5.6.3",
+    "typescript-eslint": "^8.13.0"
   },
-  "packageManager": "pnpm@9.12.2"
+  "packageManager": "pnpm@9.12.2",
+  "pnpm": {
+    "overrides": {
+      "@types/react": "npm:types-react@19.0.0-rc.1",
+      "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1"
+    }
+  }
 }
