--- a/package.json
+++ b/package.json
@@ -15,10 +15,10 @@
     "@atcute/whitewind": "^1.0.3",
     "bright": "^0.8.5",
     "lucide-react": "^0.453.0",
-    "next": "15.0.3",
-    "next-plausible": "^3.12.3",
-    "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106",
+    "next": "15.0.1",
+    "next-plausible": "^3.12.2",
+    "react": "^18",
+    "react-dom": "^18",
     "react-markdown": "^9.0.1",
     "reading-time": "^1.5.0",
     "rehype-format": "^5.0.1",
@@ -37,8 +37,8 @@
     "@ianvs/prettier-plugin-sort-imports": "^4.4.0",
     "@next/eslint-plugin-next": "15.0.3",
     "@types/node": "^22.9.0",
-    "@types/react": "npm:types-react@19.0.0-rc.1",
-    "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
     "@types/rss": "^0.0.32",
     "eslint": "^9.14.0",
     "eslint-config-next": "15.0.3",
