--- a/package.json
+++ b/package.json
@@ -11,51 +11,51 @@
     "format": "prettier -w src"
   },
   "dependencies": {
-    "@atcute/client": "^2.0.4",
-    "@atcute/whitewind": "^1.0.3",
-    "bright": "^0.8.5",
+    "@atcute/client": "^2.0.8",
+    "@atcute/whitewind": "^1.0.4",
+    "bright": "^0.8.6",
     "lucide-react": "^0.453.0",
-    "next": "15.0.1",
-    "next-plausible": "^3.12.2",
-    "react": "^18",
-    "react-dom": "^18",
-    "react-markdown": "^9.0.1",
+    "next": "15.2.3",
+    "next-plausible": "^3.12.4",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "react-markdown": "^9.1.0",
     "reading-time": "^1.5.0",
     "rehype-format": "^5.0.1",
     "rehype-raw": "^7.0.0",
     "rehype-sanitize": "^6.0.0",
     "rehype-stringify": "^10.0.1",
-    "remark-gfm": "^4.0.0",
+    "remark-gfm": "^4.0.1",
     "remark-parse": "^11.0.0",
     "remark-rehype": "^11.1.1",
     "rss": "^1.2.2",
-    "simple-icons": "^13.16.0",
-    "tailwind-merge": "^2.5.4",
+    "simple-icons": "^13.21.0",
+    "tailwind-merge": "^2.6.0",
     "unified": "^11.0.5"
   },
   "devDependencies": {
-    "@ianvs/prettier-plugin-sort-imports": "^4.4.0",
-    "@next/eslint-plugin-next": "15.0.3",
-    "@types/node": "^22.9.0",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@ianvs/prettier-plugin-sort-imports": "^4.4.1",
+    "@next/eslint-plugin-next": "15.2.3",
+    "@types/node": "^22.13.11",
+    "@types/react": "19.0.12",
+    "@types/react-dom": "19.0.4",
     "@types/rss": "^0.0.32",
-    "eslint": "^9.14.0",
-    "eslint-config-next": "15.0.3",
+    "eslint": "^9.23.0",
+    "eslint-config-next": "15.2.3",
     "eslint-config-prettier": "^9.1.0",
-    "postcss": "^8.4.47",
-    "prettier": "^3.3.3",
-    "prettier-plugin-tailwindcss": "^0.6.8",
-    "tailwindcss": "^3.4.14",
-    "tsx": "^4.19.2",
-    "typescript": "^5.6.3",
-    "typescript-eslint": "^8.13.0"
+    "postcss": "^8.5.3",
+    "prettier": "^3.5.3",
+    "prettier-plugin-tailwindcss": "^0.6.11",
+    "tailwindcss": "^3.4.17",
+    "tsx": "^4.19.3",
+    "typescript": "^5.8.2",
+    "typescript-eslint": "^8.27.0"
   },
   "packageManager": "pnpm@9.12.2",
   "pnpm": {
     "overrides": {
-      "@types/react": "npm:types-react@19.0.0-rc.1",
-      "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1"
+      "@types/react": "19.0.12",
+      "@types/react-dom": "19.0.4"
     }
   }
 }
