--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
+    "lint": "eslint .",
     "format": "prettier -w src"
   },
   "dependencies": {
@@ -15,9 +15,9 @@
     "@atcute/whitewind": "^1.0.4",
     "bright": "^0.8.6",
     "lucide-react": "^0.453.0",
-    "next": "15.2.3",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
+    "next": "16.0.3",
+    "react": "19.2.0",
+    "react-dom": "19.2.0",
     "react-markdown": "^9.1.0",
     "reading-time": "^1.5.0",
     "rehype-format": "^5.0.1",
@@ -33,22 +33,22 @@
     "unified": "^11.0.5"
   },
   "devDependencies": {
-    "@ianvs/prettier-plugin-sort-imports": "^4.4.1",
-    "@next/eslint-plugin-next": "15.2.3",
-    "@types/node": "^22.15.21",
-    "@types/react": "19.0.12",
-    "@types/react-dom": "19.0.4",
+    "@ianvs/prettier-plugin-sort-imports": "^4.7.0",
+    "@next/eslint-plugin-next": "16.0.3",
+    "@types/node": "^22.19.1",
+    "@types/react": "19.2.5",
+    "@types/react-dom": "19.2.3",
     "@types/rss": "^0.0.32",
-    "eslint": "^9.27.0",
-    "eslint-config-next": "15.2.3",
-    "eslint-config-prettier": "^9.1.0",
-    "postcss": "^8.5.3",
-    "prettier": "^3.5.3",
-    "prettier-plugin-tailwindcss": "^0.6.11",
-    "tailwindcss": "^3.4.17",
-    "tsx": "^4.19.4",
-    "typescript": "^5.8.3",
-    "typescript-eslint": "^8.32.1"
+    "eslint": "^9.39.1",
+    "eslint-config-next": "16.0.3",
+    "eslint-config-prettier": "^9.1.2",
+    "postcss": "^8.5.6",
+    "prettier": "^3.6.2",
+    "prettier-plugin-tailwindcss": "^0.6.14",
+    "tailwindcss": "^3.4.18",
+    "tsx": "^4.20.6",
+    "typescript": "^5.9.3",
+    "typescript-eslint": "^8.46.4"
   },
   "packageManager": "pnpm@9.12.2",
   "pnpm": {
@@ -56,5 +56,9 @@
       "@types/react": "19.0.12",
       "@types/react-dom": "19.0.4"
     }
+  },
+  "overrides": {
+    "@types/react": "19.2.5",
+    "@types/react-dom": "19.2.3"
   }
 }
